Use List.getFirst() for the leading element
Java 21's SequencedCollection accessor says what get(0) meant.