@@ -141,7 +141,7 @@ final class EmbedPlugWin32 implements EmbedPlug {
         do {
             ownWindows = Win32WindowFinder.findApplicationWindowsByPid(pid);
             if (ownWindows.size() == 1) {
-                return ownWindows.get(0);
+                return ownWindows.getFirst();
             }
             if (ownWindows.size() > 1) {
                 throw new IllegalStateException("This process has " + ownWindows.size()
