@@ -171,7 +171,7 @@ class EmbedPlugTest {
         do {
             found = WindowFinder.findTopLevelWindowsByPid(display, pid);
             if (!found.isEmpty()) {
-                return found.get(0);
+                return found.getFirst();
             }
             sleep();
         } while (System.nanoTime() < deadline);
