@@ -852,7 +852,7 @@ class EmbedSocketX11Test {
         do {
             found = WindowFinder.findTopLevelWindowsByPid(display, pid);
             if (!found.isEmpty()) {
-                return found.get(0);
+                return found.getFirst();
             }
             Thread.sleep(50);
         } while (System.nanoTime() < deadline);
