@@ -206,7 +206,7 @@ class TwoSocketsConcurrentTest {
         do {
             List<Long> found = WindowFinder.findTopLevelWindowsByPid(display, pid);
             if (!found.isEmpty()) {
-                return found.get(0);
+                return found.getFirst();
             }
             Thread.sleep(50);
         } while (System.nanoTime() < deadline);
