@@ -37,7 +37,7 @@ final class Win32TestClients {
         do {
             List<Long> found = Win32WindowFinder.findApplicationWindowsByPid(pid);
             if (!found.isEmpty()) {
-                return found.get(0);
+                return found.getFirst();
             }
             Thread.sleep(50);
         } while (System.nanoTime() < deadline);
